<resources>
    <string name="app_name">Boimela</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Md Khalid Syfullah</string>
    <string name="nav_header_subtitle">+8801XXXXXXXXX</string>
    <string name="nav_header_desc">Nav Header Description</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_book_reader">BookReaderActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_message">Good evening</string>
    <string name="weekly_top_selection">Weekly Top Selection</string>
    <string name="best_seller">Best Seller</string>
    <string name="view_all">View all</string>
    <string name="popular_books">Popular Books</string>
    <string name="book_series">Book Series</string>
    <string name="audiobooks">Audiobooks</string>
    <string name="editors_choice">Editors Choice</string>
    <string name="genres">Genres</string>
    <string name="top_rated_books">Top Rated Books</string>
    <string name="recently_published">Recently Published</string>
    <string name="popular_authors">Popular Authors</string>
    <string name="upcoming_soon">Upcoming Soon</string>
    <string name="new_releases">New Releases</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="search_your_book">Search your book...</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="on_sale">On Sale</string>
    <string name="pre_order_list">Pre-Order List</string>
    <string name="book">Book</string>
    <string name="random_amount">850</string>
    <string name="tk">tk</string>
    <string name="author">Author</string>
    <string name="review">Review</string>
    <string name="change_language">Change Language</string>
    <string name="share_app">Share App</string>
    <string name="email_us">Email Us</string>
    <string name="rate_app">Rate App</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="featured">Featured</string>
    <string name="top">Top</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="non_fiction">Non-Fiction</string>
    <string name="fiction">Fiction</string>
    <string name="short_stories">Short Stories</string>
    <string name="biography">Biography</string>
    <string name="religious_books">Religious Books</string>
    <string name="poetry">Poetry</string>
    <string name="publishers">Publishers</string>
    <string name="search_hint">Search book, author, publisher</string>
    <string name="enter_your_otp">Enter Your OTP Code</string>
    <string name="random_time">5:00</string>
    <string name="otp_via_sms">You\'ll receive OTP via SMS</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_an_account">Create an account to continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message">Message</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="reset">Reset</string>
    <string name="random_book_title">Kolkatai Feluda</string>
    <string name="random_author_name">Satyajit Ray</string>
    <string name="random_review">6144 reviews</string>
    <string name="awards">Awards</string>
    <string name="random_award">Best Bangla Academy Fiction Book 2022</string>
    <string name="random_number">21</string>
    <string name="pages">Pages</string>
    <string name="readers">Readers</string>
    <string name="likes">Likes</string>
    <string name="clear">Clear</string>
    <string name="enter_keyword">Enter keyword</string>
    <string name="open">Open</string>
    <string name="play">Play</string>
    <string name="series">Series</string>
    <string name="reviews">reviews</string>
    <string name="one">1</string>
    <string name="top_books">Top Books</string>
    <string name="top_authors">Top Authors</string>
    <string name="top_publishers">Top Publishers</string>
    <string name="books">Books</string>
    <string name="authors">Authors</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="now_reading">Now Reading</string>
    <string name="recently_read">Recently Read</string>
    <string name="random_percent">42%</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="font_size">Font Size</string>
    <string name="font_style">Font Style</string>
    <string name="progress_slider">Progress Slider</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="audiobook">Audiobook</string>
    <string name="contents">Contents</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="notes">Notes</string>
    <string name="now_playing">Now Playing</string>
    <string name="random_audio_time">01:15</string>
    <string name="random_audio_time_2">35:40</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="paused">Paused</string>
    <string name="ready_to_play">Ready to Play</string>
    <string name="random_speed">1x</string>
    <string name="chapters">Chapters</string>
    <string name="no_bookmarks">No Bookmarks</string>
    <string name="no_chapters">No Chapters</string>
    <string name="font_en_1">Arial</string>
    <string name="font_en_2">Baskerville</string>
    <string name="font_en_3">Bookerly</string>
    <string name="font_en_4">Calibri</string>
    <string name="font_en_5">Courier New</string>
    <string name="font_en_6">Garamond</string>
    <string name="font_en_7">Georgia</string>
    <string name="font_en_8">Helvetica</string>
    <string name="font_en_9">Monotype Corsiva</string>
    <string name="font_en_10">Palatino</string>
    <string name="font_en_11">Segoe UI</string>
    <string name="font_en_12">Segoe UI Light</string>
    <string name="font_en_13">Tahoma</string>
    <string name="font_en_14">Times New Roman</string>
    <string name="font_en_15">Verdana</string>
    <string name="font_bn_1">AdorshoLipi</string>
    <string name="font_bn_2">Akaash</string>
    <string name="font_bn_3">AponaLohit</string>
    <string name="font_bn_4">Bangla</string>
    <string name="font_bn_5">BenSen</string>
    <string name="font_bn_6">BenSen-Handwriting</string>
    <string name="font_bn_7">Kalpurush</string>
    <string name="font_bn_8">Lohit</string>
    <string name="font_bn_9">Mitra</string>
    <string name="font_bn_10">Mukti</string>
    <string name="font_bn_11">Nikosh</string>
    <string name="font_bn_12">Nikosh-Light</string>
    <string name="font_bn_13">Sagar</string>
    <string name="font_bn_14">SiyamRupali</string>
    <string name="font_bn_15">SolaimanLipi</string>
    <string name="book_details">Book Details</string>
    <string name="random_book_details">Feluda\'s paternal cousin Tapesh Ranjan Mitter, who is fondly referred to as Topshe,[4] is based on Arthur Conan Doyle\'s conception of Dr. John Watson. In the first couple of stories, his surname was Bose, but later it changed to Mitra. Just like the former army surgeon, Topshe is the quintessential accomplice and faithfully records each of Pradosh Mitter\'s exploits accurately. Topshe is a smart teenager. In the first story of Feluda series (i.e. Feludar Goyendagiri), Topshe was thirteen and a half where Feluda\'s age was twenty-seven, just the double of Topshe. Though Feluda often teases his young cousin, he is extremely fond and very protective of him. Feluda lives with Topshe\'s family. Topshe\'s father, Binay Mitter is the younger brother of Feluda\'s father, and therefore his uncle, and they all reside at 21, Rajani Sen Road, Kolkata-700029.[1] Although there really is a \'Rajani Sen Road\'[1] in Kolkata, the house number is missing. Formerly, they all used to live in Tara road, Kolkata. Though not mentioned explicitly, Topshe is good-looking, fair, tall and handsome, as per different illustrations made by Satyajit Ray himself.</string>
    <string name="publisher">Publisher</string>
    <string name="random_publisher">Avery</string>
    <string name="language">Language</string>
    <string name="random_language">English</string>
    <string name="random_category">Fiction</string>
    <string name="book_reviews">Book Reviews</string>
    <string name="your_rating">Your Rating</string>
    <string name="write_review">Write Review</string>
    <string name="submit">Submit</string>
    <string name="random_name">Khalid</string>
    <string name="random_text_small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum gravida vitae.</string>
    <string name="totally_amazing">Totally Amazing</string>
    <string name="random_time_range">two hours ago</string>
    <string name="random_birthday">May 11, 1901 - June 7, 2022</string>
    <string name="author_details">Author Details</string>
    <string name="random_location">Kolkata</string>
    <string name="not_found">Not Found!</string>
    <string name="enter_another_keyword">Enter another keyword</string>
    <string name="ratings">Ratings</string>
    <string name="subcategory">Subcategory</string>
    <string name="edition">Edition</string>
    <string name="year">Year</string>
    <string name="random_year">2022</string>
    <string name="unsupported_epub_version">This EPUB may not support text formatting</string>
    <string name="login_first">You need to Login first!</string>
    <string name="login_required">Login Required</string>
    <string name="back">Back</string>
    <string name="extras">Extras</string>
</resources>