<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>

        <item android:title="@string/change_language">
            <menu>
                <item
                    android:id="@+id/english"
                    android:title="English" />
                <item
                    android:id="@+id/bangla"
                    android:title="বাংলা" />
            </menu>
        </item>


    </group>

    <group>
        <item android:title="@string/extras">
            <menu>
                <item
                    android:id="@+id/shareApp"
                    android:icon="@drawable/menu"
                    android:title="@string/share_app" />
                <item
                    android:id="@+id/emailUs"
                    android:icon="@drawable/email"
                    android:title="@string/email_us" />
                <item
                    android:id="@+id/sendReview"
                    android:icon="@android:drawable/ic_menu_edit"
                    android:title="@string/review" />
                <item
                    android:id="@+id/rateApp"
                    android:icon="@android:drawable/btn_star"
                    android:title="@string/rate_app" />

                <item
                    android:id="@+id/login"
                    android:icon="@drawable/logout"
                    android:title="@string/login" />

                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/logout"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>



</menu>
