<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/reader_6_font_size_title"
        style="@style/TextViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/reader_6_font_size_seekbar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:max="100"
            android:maxHeight="6dp"
            android:minHeight="6dp"
            android:progressDrawable="@drawable/seekbar_drawable"
            android:thumb="@drawable/seekbar_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reader_6_font_size_title" />

        <ImageView
            android:id="@+id/reader_6_font_size_seekbar_caption"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/font_white"
            app:layout_constraintBottom_toBottomOf="@+id/reader_6_font_size_seekbar"
            app:layout_constraintEnd_toStartOf="@+id/reader_6_font_size_seekbar"
            app:layout_constraintStart_toStartOf="@+id/speed_seekbar"
            app:layout_constraintTop_toTopOf="@+id/reader_6_font_size_seekbar" />

        <ImageView
            android:id="@+id/reader_6_font_size_seekbar_caption2"
            style="@style/TextViewC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/font_white"
            app:layout_constraintBottom_toBottomOf="@+id/reader_6_font_size_seekbar"
            app:layout_constraintStart_toEndOf="@+id/reader_6_font_size_seekbar"
            app:layout_constraintTop_toTopOf="@+id/reader_6_font_size_seekbar" />

    <View
            android:id="@+id/reader_6_font_size_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reader_6_font_size_seekbar" />

    <TextView
        android:id="@+id/reader_6_font_style_title"
        style="@style/TextViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/font_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reader_6_font_size_divider" />

    <HorizontalScrollView
        android:id="@+id/reader_6_font_style_horizontal_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbarThumbHorizontal="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reader_6_font_style_title">

        <LinearLayout
            android:id="@+id/reader_6_font_style_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reader_6_font_style_title">

            <TextView
                android:id="@+id/reader_6_font_style_text"
                style="@style/ButtonBorderedSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_1" />

            <TextView
                android:id="@+id/reader_6_font_style_text_2"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_2" />

            <TextView
                android:id="@+id/reader_6_font_style_text_3"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_3" />

            <TextView
                android:id="@+id/reader_6_font_style_text_4"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_4" />

            <TextView
                android:id="@+id/reader_6_font_style_text_5"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_5" />

            <TextView
                android:id="@+id/reader_6_font_style_text_6"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_6" />

            <TextView
                android:id="@+id/reader_6_font_style_text_7"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_7" />

            <TextView
                android:id="@+id/reader_6_font_style_text_8"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_8" />

            <TextView
                android:id="@+id/reader_6_font_style_text_9"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_9" />

            <TextView
                android:id="@+id/reader_6_font_style_text_10"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_10" />

            <TextView
                android:id="@+id/reader_6_font_style_text_11"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_11" />

            <TextView
                android:id="@+id/reader_6_font_style_text_12"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_12" />

            <TextView
                android:id="@+id/reader_6_font_style_text_13"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_13" />

            <TextView
                android:id="@+id/reader_6_font_style_text_14"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_14" />

            <TextView
                android:id="@+id/reader_6_font_style_text_15"
                style="@style/ButtonBordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/font_bn_15" />

        </LinearLayout>

    </HorizontalScrollView>


    <View
        android:id="@+id/reader_6_font_style_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reader_6_font_style_horizontal_scroll_view" />

    <TextView
        android:id="@+id/reader_6_progress_slider_title"
        style="@style/TextViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/progress_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reader_6_font_style_divider" />

    <LinearLayout
        android:id="@+id/reader_6_progress_slider_linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reader_6_progress_slider_title">

        <TextView
            android:id="@+id/reader_6_progress_slider_show_text"
            style="@style/ButtonBorderedSelected"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/show" />

        <TextView
            android:id="@+id/reader_6_progress_slider_hide_text"
            style="@style/ButtonBordered"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/hide" />
    </LinearLayout>

    <View
        android:id="@+id/reader_6_progress_slider_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reader_6_progress_slider_linear_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>