<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.store.StoreFragment">

    <EditText
        android:id="@+id/store_search_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/search_background"
        android:drawableStart="@drawable/search"
        android:drawableEnd="@drawable/filter"
        android:drawablePadding="8dp"
        android:drawableTint="@color/oboshor"
        android:hint="@string/search_hint"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="16dp" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/store_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store_search_view">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/store_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/store_tab_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/featured" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/store_tab_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/store_tab_item_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories" />
        </com.google.android.material.tabs.TabLayout>

    </androidx.viewpager.widget.ViewPager>
</androidx.constraintlayout.widget.ConstraintLayout>