<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.store.StoreViewPager2">


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/store_2_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/store_2_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorColor="@color/transparent"
                app:tabTextAppearance="@style/TextViewLabelB2"
                tools:tabTextAppearance="@style/TextViewLabelA3">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/store_2_tab_item_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/books" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/store_2_tab_item_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authors" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/store_2_tab_item_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publishers" />
            </com.google.android.material.tabs.TabLayout>

        </androidx.viewpager.widget.ViewPager>
    </androidx.constraintlayout.widget.ConstraintLayout>
