<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.library.LibraryFragment">

    <TextView
        android:id="@+id/library_title"
        style="@style/TextViewLabelA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/transparent"
        android:text="@string/library"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/library_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/library_title">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/library_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/transparent"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextAppearance="@style/TextViewLabelB3"
            app:tabTextColor="@color/black">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/library_tab_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_reading" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/library_tab_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookshelf" />

        </com.google.android.material.tabs.TabLayout>

    </androidx.viewpager.widget.ViewPager>
</androidx.constraintlayout.widget.ConstraintLayout>